--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.19.5
-scikit-learn==0.24.2
-torch==1.4.0
-pandas==1.1.5
-tqdm==4.62.3
+torch~=1.13.1
+numpy~=1.23.1
+pandas~=1.5.0
+sklearn~=0.0
+scikit-learn~=1.1.2
+tqdm~=4.64.1
